--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,11 @@
     "recharts": "^2.8.0",
     "lucide-react": "^0.263.1",
     "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0"
+    "@emotion/styled": "^11.11.0",
+    "web-vitals": "^2.1.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
